# the-36-guilds

./: .gitignore  LICENSE  README.md  install_openclaw.py  pyproject.toml  server.py  setup_guilds.py
docs/: getting-started.md
examples/it_company_output/: install_agents.sh  openclaw_agents.json
examples/it_company_output/config/: agents.yaml
examples/it_company_output/docs/: permission_matrix.md  task_flow.md
guilds/: __init__.py  engine.py  renderer.py  schema.py
guilds/presets/: imperial_court.yaml  investment_firm.yaml  it_company.yaml  quant_trading.yaml
tests/: test_engine.py
ui/: index.html
