[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "the-36-guilds"
version = "0.1.0"
description = "三十六行 · The 36 Guilds — Multi-Agent Organizational Template System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BruceLanLan"},
]
keywords = ["multi-agent", "ai-agents", "orchestration", "templates", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/BruceLanLan/the-36-guilds"
Repository = "https://github.com/BruceLanLan/the-36-guilds"
Issues = "https://github.com/BruceLanLan/the-36-guilds/issues"

[project.scripts]
setup-guilds = "setup_guilds:main"

[tool.setuptools.packages.find]
include = ["guilds*"]

[tool.setuptools.package-data]
guilds = ["presets/*.yaml"]
